FIXED TEXT ALIGN ISSUE

--- a/styles/animation-canvas-feature-product-component.scss
+++ b/styles/animation-canvas-feature-product-component.scss
@@ -136,6 +136,7 @@
                 line-height: 1.2;
                 margin-bottom: 6vw;
                 letter-spacing: .02em;
+                text-align: center;
             }
             .paragraph1{
                 font-size: 3.7vw;
